Client Lourd/Sources/DLL/Interface/FacadeInterfaceNative.h

	__declspec(dllexport) void libererModele();
	__declspec(dllexport) void initialiserOpenGL(int * handle);
	__declspec(dllexport) void libererOpenGL();
	__declspec(dllexport) void dessinerOpenGL();
	__declspec(dllexport) void animer(double temps);
	__declspec(dllexport) char* obtenirPropriete();
	__declspec(dllexport) char* sauvegarderZone(char* nomFichier, int nomLength, char* proprietes, int proprietesLength);
	__declspec(dllexport) void chargerZone(char* nomFichier, int nomLength);
	__declspec(dllexport) void takeScreenShot(char* path, int length, bool square, int maxSize);
	__declspec(dllexport) void creerFichierConfig(int config[14]);
	__declspec(dllexport) int* chargerFichierConfiguration();
	__declspec(dllexport) void creerFichierCampagne(char* nomFichier, int length);
	__declspec(dllexport) char* obtenirDerniereCampagne();
	__declspec(dllexport) void sauvegarderHistorique();
	__declspec(dllexport) void annulerModifications();
	__declspec(dllexport) void retablirModifications();
	__declspec(dllexport) void viderHistorique();
	__declspec(dllexport) bool possedeSuivant();
	__declspec(dllexport) bool possedePrecedent();
	__declspec(dllexport) void zoomInElastique(int xCoin1, int yCoin1, int xCoin2, int yCoin2);
	__declspec(dllexport) void zoomOutElastique(int xCoin1, int yCoin1, int xCoin2, int yCoin2);
	__declspec(dllexport) bool resetZoom(void);
	__declspec(dllexport) double obtenirZoomCourant(void);
	__declspec(dllexport) void zoomIn();
	__declspec(dllexport) void zoomOut();
	__declspec(dllexport) void afficherTextes(bool afficher = true);
	__declspec(dllexport) void creeTexte(char* text, int lengthT, char* font, int lengthF);
	__declspec(dllexport) void updateText(char* oldText, int lengthO, char* newText, int lengthN);
	__declspec(dllexport) void resize(char* text, int length, int size);
	__declspec(dllexport) void changerCouleurV(char* text, int length, float couleur[3]);
	__declspec(dllexport) void repositionner(char* text, int length, float x, float y);
	__declspec(dllexport) void suprimerAllText();
	__declspec(dllexport) void initialiserSon();
	__declspec(dllexport) void jouerSon(char* value, int length, bool pause = false);
	__declspec(dllexport) void bouclerSon(char* value, int length, bool loop = true);
	__declspec(dllexport) void ajusterVolume(char* value, int length, float pourcentage);
	__declspec(dllexport) void mute(char* value, int, bool mute);
	__declspec(dllexport) void arreterToutSons();
	__declspec(dllexport) int selectionMultiple(bool c);
	__declspec(dllexport) void deselectAll(void);
	__declspec(dllexport) void selectAll(void);
	__declspec(dllexport) void deplacerSelection(int x1, int y1, int x2, int y2, bool duplication);
	__declspec(dllexport) void agrandirSelection(int x1, int y1, int x2, int y2);
	__declspec(dllexport) void dupliquerSelection(int i, int j);
	__declspec(dllexport) void removeObject(void);
	__declspec(dllexport) void creerMur(int originX, int originY, int x1, int y1, int x2, int y2);
	__declspec(dllexport) bool duplicationEstHorsTable();
	__declspec(dllexport) double getPositionX(void);
	__declspec(dllexport) double getPositionY(void);
	__declspec(dllexport) double getAngle(void);
	__declspec(dllexport) double getScale(void);
	__declspec(dllexport) bool zoneValide();
	__declspec(dllexport) int obtenirTouchePGJ1();
	__declspec(dllexport) int obtenirTouchePGJ2();
	__declspec(dllexport) void redimensionnerFenetre(int largeur, int hauteur);
	__declspec(dllexport) void translater(double deplacementX, double deplacementY);
	__declspec(dllexport) int obtenirNombreSelection();
	__declspec(dllexport) void creerObjet(char* value, int length, bool isTwin = false, int colorShift = 0);
	__declspec(dllexport) bool creerObjetAvecTests(char* value, int length, bool isTwin, bool colorShift, int posX, int posY, int posZ, float angleX, float angleY, float angleZ);
	__declspec(dllexport) int selectionnerObjetSousPointClique(int i, int j, int largeur, int hauteur, bool ctrlDown = false, bool gaucheEnfonce = false, bool sourisSurSelection = false);
	__declspec(dllexport) void tournerSelectionSouris(int x1, int y1, int x2, int y2);